# Fc-engineering-studio

./: GEMINI.md  README.md  pyproject.toml
.jules/: sentinel.md
src/: main.py  mutants.yaml  sequences.yaml
tests/: test_logic.py  test_ui.py
